--- a/buffer.ipynb
+++ b/buffer.ipynb
@@ -24,6 +24,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "720662a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "assignment destination is read-only",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      9\u001b[39m copy = g.copy()\n\u001b[32m     10\u001b[39m copy.a[\u001b[32m1\u001b[39m,\u001b[32m0\u001b[39m] = \u001b[32m5\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[43mg\u001b[49m\u001b[43m.\u001b[49m\u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m = \u001b[32m5\u001b[39m\n",
+      "\u001b[31mValueError\u001b[39m: assignment destination is read-only"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import importlib\n",
+    "import arc.grids.core\n",
+    "importlib.reload(arc.grids.core)\n",
+    "from arc.grids.core import Grid\n",
+    "import numpy as np\n",
+    "\n",
+    "g = Grid(np.array([[1, 2], [3, 4]]))\n",
+    "\n",
+    "copy = g.copy()\n",
+    "copy.a[1,0] = 5\n",
+    "# g.a[1,0] = 5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b9e22377",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'g' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mg\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'g' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(g)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "86b9e890",
    "metadata": {},
    "outputs": [],
