updated training notebook with centralized constants and dynamic code as per GPU

--- a/notebooks/train_tinylm.ipynb
+++ b/notebooks/train_tinylm.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# TinyLM Training on Google Colab\n",
     "\n",
-    "This notebook trains a TinyLM model on ARC-AGI data using Google Colab's GPU resources.\n",
+    "## This notebook trains a TinyLM model on ARC-AGI data using Google Colab's GPU resources.\n",
     "\n",
-    "## Setup Instructions:\n",
+    "### Setup Instructions:\n",
     "1. Upload this notebook to Google Colab\n",
     "2. Enable GPU runtime: Runtime → Change runtime type → GPU (T4/V100)\n",
     "3. Run all cells in order"
@@ -75,12 +75,20 @@
     "project_root = Path.cwd()\n",
     "sys.path.append(str(project_root))\n",
     "\n",
-    "# Import the training function\n",
+    "# Import the training function and centralized constants\n",
     "from arc.models.train import train\n",
     "from arc.models.tiny_lm import TinyLMConfig\n",
+    "from arc.utils.constants import (\n",
+    "    MODEL_CONFIGS, \n",
+    "    TRAINING_CONFIGS, \n",
+    "    get_matched_configs,\n",
+    "    estimate_model_parameters\n",
+    ")\n",
     "\n",
-    "print(\"Successfully imported training modules\")\n",
-    "print(f\"Project root: {project_root}\")"
+    "print(\"Successfully imported training modules and centralized constants\")\n",
+    "print(f\"Project root: {project_root}\")\n",
+    "print(f\"Available model sizes: {list(MODEL_CONFIGS.keys())}\")\n",
+    "print(f\"Available training profiles: {list(TRAINING_CONFIGS.keys())}\")"
    ]
   },
   {
@@ -138,37 +146,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Training configuration\n",
+    "# GPU-aware dynamic configuration selection\n",
+    "def select_optimal_configs(gpu_memory_gb):\n",
+    "    \"\"\"Select optimal model and training configs based on GPU memory.\"\"\"\n",
+    "    \n",
+    "    print(f\"GPU Memory: {gpu_memory_gb:.1f} GB\")\n",
+    "    \n",
+    "    # Select configs based on GPU memory\n",
+    "    if gpu_memory_gb < 4:\n",
+    "        model_size = 'tiny'\n",
+    "        training_profile = 'debug'\n",
+    "        print(\"⚠️  Low GPU memory detected - using minimal config for testing\")\n",
+    "    elif gpu_memory_gb < 8:\n",
+    "        model_size = 'tiny'\n",
+    "        training_profile = 'small_gpu'\n",
+    "        print(\"📱 Small GPU detected - using tiny model with memory optimization\")\n",
+    "    elif gpu_memory_gb < 16:\n",
+    "        model_size = 'small'\n",
+    "        training_profile = 'medium_gpu'\n",
+    "        print(\"🖥️  Medium GPU detected - using small model\")\n",
+    "    else:\n",
+    "        model_size = 'medium'\n",
+    "        training_profile = 'large_gpu'\n",
+    "        print(\"🚀 Large GPU detected - using medium model for best performance\")\n",
+    "    \n",
+    "    # Get matched configurations\n",
+    "    model_config, training_config = get_matched_configs(model_size, training_profile)\n",
+    "    \n",
+    "    # Display configuration info\n",
+    "    param_count = estimate_model_parameters(model_config)\n",
+    "    effective_batch_size = training_config['batch_size'] * training_config['grad_accumulation_steps']\n",
+    "    \n",
+    "    print(f\"\\nSelected Configuration:\")\n",
+    "    print(f\"  Model: {model_size} ({param_count/1e6:.1f}M parameters)\")\n",
+    "    print(f\"  Training profile: {training_profile}\")\n",
+    "    print(f\"  Batch size: {training_config['batch_size']} (effective: {effective_batch_size})\")\n",
+    "    print(f\"  Max sequence length: {training_config['max_sequence_length']}\")\n",
+    "    print(f\"  Gradient accumulation: {training_config['grad_accumulation_steps']} steps\")\n",
+    "    \n",
+    "    return model_config, training_config\n",
+    "\n",
+    "# Check GPU and select optimal configuration\n",
+    "if torch.cuda.is_available():\n",
+    "    gpu_memory = torch.cuda.get_device_properties(0).total_memory / 1e9\n",
+    "    model_config, training_config = select_optimal_configs(gpu_memory)\n",
+    "else:\n",
+    "    print(\" No GPU detected! Using CPU-friendly minimal config\")\n",
+    "    model_config, training_config = get_matched_configs('tiny', 'debug')\n",
+    "\n",
+    "# Training configuration for this session\n",
     "TRAINING_CONFIG = {\n",
     "    # Data paths\n",
     "    \"data_path\": str(data_dir / \"raw\" / \"arc\" / \"training\"),\n",
     "    \"model_dir\": \"./models/tinylm_checkpoints\",\n",
     "    \n",
-    "    # Model parameters\n",
-    "    \"d_model\": 448,        # Model dimension - adjust for GPU memory\n",
-    "    \n",
-    "    # Training parameters\n",
-    "    \"steps\": 10_000,       # Number of training steps (reduce for testing)\n",
-    "    \"batch_size\": 16,      # Batch size - adjust for GPU memory\n",
-    "    \"learning_rate\": 3e-4, # Learning rate\n",
-    "    \n",
-    "    # Logging\n",
-    "    \"save_every\": 1000,    # Save checkpoint every N steps\n",
+    "    # Use centralized configurations\n",
+    "    \"model_config\": model_config,\n",
+    "    \"training_config\": training_config,\n",
     "}\n",
     "\n",
-    "print(\"Training Configuration:\")\n",
-    "for key, value in TRAINING_CONFIG.items():\n",
-    "    print(f\"  {key}: {value}\")\n",
-    "\n",
-    "# Check GPU memory and suggest batch size\n",
-    "if torch.cuda.is_available():\n",
-    "    gpu_memory = torch.cuda.get_device_properties(0).total_memory / 1e9\n",
-    "    if gpu_memory < 8:\n",
-    "        print(f\"\\nWARNING: GPU has {gpu_memory:.1f}GB memory. Consider reducing batch_size to 8 or 4\")\n",
-    "        TRAINING_CONFIG[\"batch_size\"] = 8\n",
-    "    elif gpu_memory >= 16:\n",
-    "        print(f\"\\nSUCCESS: GPU has {gpu_memory:.1f}GB memory. You can increase batch_size to 32\")\n",
-    "        TRAINING_CONFIG[\"batch_size\"] = 32"
+    "print(\"\\nFinal Training Configuration:\")\n",
+    "print(f\"  Data path: {TRAINING_CONFIG['data_path']}\")\n",
+    "print(f\"  Model dir: {TRAINING_CONFIG['model_dir']}\")\n",
+    "print(f\"  Steps: {training_config['steps']:,}\")\n",
+    "print(f\"  Learning rate: {training_config['learning_rate']}\")\n",
+    "print(f\"  Weight decay: {training_config['weight_decay']}\")\n",
+    "print(f\"  Use AMP: {training_config['use_amp']}\")"
    ]
   },
   {
@@ -183,19 +226,36 @@
     "output_dir.mkdir(parents=True, exist_ok=True)\n",
     "print(f\"Created output directory: {output_dir}\")\n",
     "\n",
-    "# Quick test of model creation\n",
-    "print(\"\\nTesting model creation...\")\n",
+    "# Test model creation with centralized config\n",
+    "print(\"\\nTesting model creation with selected configuration...\")\n",
     "try:\n",
-    "    from arc.serialize import VOCAB_SIZE\n",
+    "    from arc.utils.constants import VOCAB_SIZE\n",
     "    print(f\"Vocabulary size: {VOCAB_SIZE}\")\n",
     "    \n",
-    "    # Create a test config\n",
-    "    test_config = TinyLMConfig(vocab_size=VOCAB_SIZE, d_model=TRAINING_CONFIG[\"d_model\"])\n",
-    "    print(f\"Model config created: {test_config.d_model}D model\")\n",
+    "    # Create model with selected configuration\n",
+    "    model_cfg = TRAINING_CONFIG[\"model_config\"]\n",
+    "    test_config = TinyLMConfig(**model_cfg)\n",
+    "    print(f\"✓ Model config created successfully\")\n",
+    "    print(f\"  Architecture: {test_config.d_model}D, {test_config.n_layers} layers, {test_config.n_heads} heads\")\n",
+    "    print(f\"  Parameters: ~{estimate_model_parameters(model_cfg)/1e6:.1f}M\")\n",
+    "    print(f\"  Max sequence length: {test_config.max_len}\")\n",
+    "    \n",
+    "    # Display memory usage estimate\n",
+    "    param_size_mb = estimate_model_parameters(model_cfg) * 4 / 1e6  # 4 bytes per float32\n",
+    "    training_cfg = TRAINING_CONFIG[\"training_config\"]\n",
+    "    batch_memory_mb = (training_cfg['batch_size'] * training_cfg['max_sequence_length'] * \n",
+    "                      model_cfg['d_model'] * 4) / 1e6\n",
+    "    \n",
+    "    print(f\"\\nMemory Estimates:\")\n",
+    "    print(f\"  Model size: ~{param_size_mb:.0f} MB\")\n",
+    "    print(f\"  Batch memory: ~{batch_memory_mb:.0f} MB\")\n",
+    "    print(f\"  Total training memory: ~{param_size_mb + batch_memory_mb*3:.0f} MB (estimated)\")\n",
     "    \n",
     "except Exception as e:\n",
-    "    print(f\"ERROR: Error creating model: {e}\")\n",
-    "    print(\"This might be due to missing implementations in serialize module\")"
+    "    print(f\" Error creating model: {e}\")\n",
+    "    print(\"This might indicate missing implementations in serialize module\")\n",
+    "    import traceback\n",
+    "    traceback.print_exc()"
    ]
   },
   {
@@ -215,36 +275,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start training\n",
+    "# Start training with centralized configurations\n",
     "import time\n",
     "\n",
-    "print(\"Starting TinyLM training...\")\n",
+    "print(\"Starting TinyLM training with centralized configuration...\")\n",
     "print(f\"Model will be saved to: {TRAINING_CONFIG['model_dir']}\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "# Display final configuration summary\n",
+    "model_cfg = TRAINING_CONFIG[\"model_config\"]\n",
+    "training_cfg = TRAINING_CONFIG[\"training_config\"]\n",
+    "\n",
+    "print(\"CONFIGURATION SUMMARY:\")\n",
+    "print(f\"  Model: {model_cfg['d_model']}D, {model_cfg['n_layers']}L, {model_cfg['n_heads']}H\")\n",
+    "print(f\"  Parameters: ~{estimate_model_parameters(model_cfg)/1e6:.1f}M\")\n",
+    "print(f\"  Training steps: {training_cfg['steps']:,}\")\n",
+    "print(f\"  Effective batch size: {training_cfg['batch_size'] * training_cfg['grad_accumulation_steps']}\")\n",
+    "print(f\"  Learning rate: {training_cfg['learning_rate']}\")\n",
+    "print(f\"  Sequence length: {training_cfg['max_sequence_length']}\")\n",
+    "print(\"=\"*60)\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
     "try:\n",
-    "    # Call the training function\n",
+    "    # Call the training function with centralized configs\n",
     "    train(\n",
     "        model_dir=TRAINING_CONFIG[\"model_dir\"],\n",
     "        data_path=TRAINING_CONFIG[\"data_path\"],\n",
-    "        steps=TRAINING_CONFIG[\"steps\"],\n",
-    "        bs=TRAINING_CONFIG[\"batch_size\"],\n",
-    "        lr=TRAINING_CONFIG[\"learning_rate\"],\n",
-    "        d_model=TRAINING_CONFIG[\"d_model\"]\n",
+    "        # Pass individual model config parameters for compatibility\n",
+    "        steps=training_cfg[\"steps\"],\n",
+    "        bs=training_cfg[\"batch_size\"],\n",
+    "        lr=training_cfg[\"learning_rate\"],\n",
+    "        d_model=model_cfg[\"d_model\"],\n",
+    "        n_layers=model_cfg[\"n_layers\"],\n",
+    "        n_heads=model_cfg[\"n_heads\"],\n",
+    "        # Use training profile for gradient accumulation\n",
+    "        training_profile=list(TRAINING_CONFIGS.keys())[\n",
+    "            list(TRAINING_CONFIGS.values()).index(training_cfg)\n",
+    "        ]\n",
     "    )\n",
     "    \n",
     "    end_time = time.time()\n",
     "    training_time = end_time - start_time\n",
     "    \n",
-    "    print(\"=\"*50)\n",
-    "    print(f\"Training completed successfully!\")\n",
-    "    print(f\"Training time: {training_time/60:.1f} minutes\")\n",
-    "    print(f\"Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
+    "    print(\"=\"*60)\n",
+    "    print(f\" Training completed successfully!\")\n",
+    "    print(f\"  Training time: {training_time/60:.1f} minutes\")\n",
+    "    print(f\" Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
     "    \n",
     "except Exception as e:\n",
-    "    print(f\"Training failed with error: {e}\")\n",
+    "    print(f\" Training failed with error: {e}\")\n",
     "    import traceback\n",
     "    traceback.print_exc()"
    ]
@@ -313,10 +393,11 @@
     "        # Load the model\n",
     "        checkpoint = torch.load(model_path, map_location='cpu')\n",
     "        \n",
-    "        # Recreate the model\n",
+    "        # Recreate the model using centralized config\n",
     "        from arc.models.tiny_lm import TinyLM, TinyLMConfig\n",
-    "        from arc.serialize import VOCAB_SIZE\n",
+    "        from arc.utils.constants import VOCAB_SIZE\n",
     "        \n",
+    "        # Use the same config that was used for training\n",
     "        cfg = TinyLMConfig(**checkpoint['cfg'])\n",
     "        model = TinyLM(cfg)\n",
     "        model.load_state_dict(checkpoint['model'])\n",
@@ -327,25 +408,37 @@
     "        model.eval()\n",
     "        \n",
     "        print(f\"Model loaded successfully on {device}\")\n",
-    "        print(f\"Model parameters: {sum(p.numel() for p in model.parameters()):,}\")\n",
     "        \n",
-    "        # Test with dummy input\n",
-    "        batch_size, seq_len = 4, 16\n",
+    "        # Display model info\n",
+    "        total_params = sum(p.numel() for p in model.parameters())\n",
+    "        trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "        \n",
+    "        print(f\"Model Statistics:\")\n",
+    "        print(f\"  Total parameters: {total_params:,}\")\n",
+    "        print(f\"  Trainable parameters: {trainable_params:,}\")\n",
+    "        print(f\"  Model size: ~{total_params * 4 / 1e6:.1f} MB\")\n",
+    "        print(f\"  Architecture: {cfg.d_model}D × {cfg.n_layers}L × {cfg.n_heads}H\")\n",
+    "        \n",
+    "        # Test with dummy input using the trained sequence length\n",
+    "        batch_size = 4\n",
+    "        seq_len = min(64, cfg.max_len)  # Use shorter sequence for testing\n",
     "        dummy_input = torch.randint(0, VOCAB_SIZE, (batch_size, seq_len)).to(device)\n",
     "        \n",
     "        with torch.no_grad():\n",
     "            output = model(dummy_input)\n",
-    "            print(f\"Forward pass successful!\")\n",
+    "            print(f\"\\n Forward Pass Test:\")\n",
     "            print(f\"  Input shape: {dummy_input.shape}\")\n",
     "            print(f\"  Output shape: {output.shape}\")\n",
     "            print(f\"  Output range: [{output.min():.3f}, {output.max():.3f}]\")\n",
+    "            print(f\"  Output mean: {output.mean():.3f}\")\n",
+    "            print(f\"  Model is working correctly!\")\n",
     "            \n",
     "    except Exception as e:\n",
     "        print(f\"Model testing failed: {e}\")\n",
     "        import traceback\n",
     "        traceback.print_exc()\n",
     "else:\n",
-    "    print(\"No trained model found to test\")"
+    "    print(\"  No trained model found to test\")"
    ]
   },
   {
@@ -403,18 +496,37 @@
     "#     shutil.copytree(model_dir, drive_path, dirs_exist_ok=True)\n",
     "#     print(f\"Models saved to Google Drive: {drive_path}\")\n",
     "\n",
-    "print(\"Training notebook complete!\")\n",
-    "print(\"\\nSummary:\")\n",
-    "print(f\"   • Model architecture: TinyLM with {TRAINING_CONFIG['d_model']} dimensions\")\n",
-    "print(f\"   • Training steps: {TRAINING_CONFIG['steps']:,}\")\n",
-    "print(f\"   • Batch size: {TRAINING_CONFIG['batch_size']}\")\n",
-    "print(f\"   • Learning rate: {TRAINING_CONFIG['learning_rate']}\")\n",
-    "print(f\"   • Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
-    "print(\"\\nNext steps:\")\n",
-    "print(\"   • Implement proper data loading in arc.io.load_task()\")\n",
-    "print(\"   • Implement tokenization in arc.serialize.pack_example()\")\n",
-    "print(\"   • Run evaluation on the trained model\")\n",
-    "print(\"   • Experiment with different hyperparameters\")"
+    "print(\" Training notebook complete!\")\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"TRAINING SUMMARY:\")\n",
+    "\n",
+    "# Display final configuration that was used\n",
+    "final_model_cfg = TRAINING_CONFIG[\"model_config\"]\n",
+    "final_training_cfg = TRAINING_CONFIG[\"training_config\"]\n",
+    "\n",
+    "print(f\" Model: {final_model_cfg['d_model']}D × {final_model_cfg['n_layers']}L × {final_model_cfg['n_heads']}H\")\n",
+    "print(f\" Parameters: ~{estimate_model_parameters(final_model_cfg)/1e6:.1f}M\")\n",
+    "print(f\" Training steps: {final_training_cfg['steps']:,}\")\n",
+    "print(f\" Batch size: {final_training_cfg['batch_size']} (effective: {final_training_cfg['batch_size'] * final_training_cfg['grad_accumulation_steps']})\")\n",
+    "print(f\" Sequence length: {final_training_cfg['max_sequence_length']}\")\n",
+    "print(f\" Learning rate: {final_training_cfg['learning_rate']}\")\n",
+    "print(f\" Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
+    "\n",
+    "print(f\"\\n🔧 GPU Optimizations Used:\")\n",
+    "print(f\"  • Gradient accumulation: {final_training_cfg['grad_accumulation_steps']} steps\")\n",
+    "print(f\"  • Mixed precision: {'✅' if final_training_cfg['use_amp'] else '❌'}\")\n",
+    "print(f\"  • Gradient clipping: {final_training_cfg['grad_clip_norm']}\")\n",
+    "\n",
+    "print(f\"\\n Next Steps:\")\n",
+    "print(\"   •  Centralized configuration system implemented\")\n",
+    "print(\"   •  GPU-aware automatic config selection\")\n",
+    "print(\"   •  Implement proper data loading (arc.io.load_task)\")\n",
+    "print(\"   •  Implement tokenization (arc.serialize.pack_example)\")\n",
+    "print(\"   •  Run evaluation on the trained model\")\n",
+    "print(\"   •  Experiment with different hyperparameters\")\n",
+    "print(\"   •  Try larger models if GPU memory allows\")\n",
+    "\n",
+    "print(\"=\"*60)"
    ]
   }
  ],
