--- a/notebooks/task_viz.ipynb
+++ b/notebooks/task_viz.ipynb
@@ -29,7 +29,10 @@
     "!git clone https://github.com/CalebTalley2024/ARC-AGI-2.git\n",
     "%cd ARC-AGI-2\n",
     "\n",
+    "!git checkout vedant\n",
+    "\n",
     "# Install required packages\n",
+    "!pip install -e .\n",
     "!pip install matplotlib numpy"
    ]
   },
