resolve library conflicts

--- a/notebooks/train_tinylm.ipynb
+++ b/notebooks/train_tinylm.ipynb
@@ -54,9 +54,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install the package and dependencies\n",
-    "!pip install -e .\n",
-    "!pip install tqdm transformers"
+    "# Install exact package versions for reproducibility\n",
+    "!pip install --quiet \\\n",
+    "    numpy==1.24.4 \\\n",
+    "    matplotlib==3.7.5 \\\n",
+    "    pandas==2.0.3 \\\n",
+    "    scipy==1.10.1 \\\n",
+    "    scikit-learn==1.3.2 \\\n",
+    "    torch==2.2.2 \\\n",
+    "    torchvision==0.17.2 \\\n",
+    "    torchaudio==2.2.2 \\\n",
+    "    transformers==4.46.3 \\\n",
+    "    huggingface-hub==0.36.0 \\\n",
+    "    tokenizers==0.20.3 \\\n",
+    "    safetensors==0.5.3 \\\n",
+    "    seaborn==0.13.2 \\\n",
+    "    plotly==6.4.0 \\\n",
+    "    tqdm==4.67.1 \\\n",
+    "    pyyaml==6.0.3 \\\n",
+    "    requests==2.32.4 \\\n",
+    "    packaging==25.0 \\\n",
+    "    jsonschema==4.23.0 \\\n",
+    "    fastjsonschema==2.21.2 \\\n",
+    "    jinja2==3.1.6 \\\n",
+    "    markupsafe==2.1.5 \\\n",
+    "    urllib3==2.2.3 \\\n",
+    "    certifi==2025.10.5 \\\n",
+    "    charset-normalizer==3.4.4 \\\n",
+    "    idna==3.11 \\\n",
+    "    python-dateutil==2.9.0.post0 \\\n",
+    "    pytz==2025.2 \\\n",
+    "    tzdata==2025.2 \\\n",
+    "    six==1.17.0 \\\n",
+    "    setuptools==75.3.2\n",
+    "\n",
+    "# Install the package in development mode\n",
+    "!pip install -e ."
    ]
   },
   {
@@ -156,19 +189,19 @@
     "    if gpu_memory_gb < 4:\n",
     "        model_size = 'tiny'\n",
     "        training_profile = 'debug'\n",
-    "        print(\"⚠️  Low GPU memory detected - using minimal config for testing\")\n",
+    "        print(\"Low GPU memory detected - using minimal config for testing\")\n",
     "    elif gpu_memory_gb < 8:\n",
     "        model_size = 'tiny'\n",
     "        training_profile = 'small_gpu'\n",
-    "        print(\"📱 Small GPU detected - using tiny model with memory optimization\")\n",
+    "        print(\"Small GPU detected - using tiny model with memory optimization\")\n",
     "    elif gpu_memory_gb < 16:\n",
     "        model_size = 'small'\n",
     "        training_profile = 'medium_gpu'\n",
-    "        print(\"🖥️  Medium GPU detected - using small model\")\n",
+    "        print(\"Medium GPU detected - using small model\")\n",
     "    else:\n",
     "        model_size = 'medium'\n",
     "        training_profile = 'large_gpu'\n",
-    "        print(\"🚀 Large GPU detected - using medium model for best performance\")\n",
+    "        print(\"Large GPU detected - using medium model for best performance\")\n",
     "    \n",
     "    # Get matched configurations\n",
     "    model_config, training_config = get_matched_configs(model_size, training_profile)\n",
@@ -191,7 +224,7 @@
     "    gpu_memory = torch.cuda.get_device_properties(0).total_memory / 1e9\n",
     "    model_config, training_config = select_optimal_configs(gpu_memory)\n",
     "else:\n",
-    "    print(\" No GPU detected! Using CPU-friendly minimal config\")\n",
+    "    print(\"No GPU detected! Using CPU-friendly minimal config\")\n",
     "    model_config, training_config = get_matched_configs('tiny', 'debug')\n",
     "\n",
     "# Training configuration for this session\n",
@@ -235,7 +268,7 @@
     "    # Create model with selected configuration\n",
     "    model_cfg = TRAINING_CONFIG[\"model_config\"]\n",
     "    test_config = TinyLMConfig(**model_cfg)\n",
-    "    print(f\"✓ Model config created successfully\")\n",
+    "    print(f\"Model config created successfully\")\n",
     "    print(f\"  Architecture: {test_config.d_model}D, {test_config.n_layers} layers, {test_config.n_heads} heads\")\n",
     "    print(f\"  Parameters: ~{estimate_model_parameters(model_cfg)/1e6:.1f}M\")\n",
     "    print(f\"  Max sequence length: {test_config.max_len}\")\n",
@@ -252,7 +285,7 @@
     "    print(f\"  Total training memory: ~{param_size_mb + batch_memory_mb*3:.0f} MB (estimated)\")\n",
     "    \n",
     "except Exception as e:\n",
-    "    print(f\" Error creating model: {e}\")\n",
+    "    print(f\"Error creating model: {e}\")\n",
     "    print(\"This might indicate missing implementations in serialize module\")\n",
     "    import traceback\n",
     "    traceback.print_exc()"
@@ -319,12 +352,12 @@
     "    training_time = end_time - start_time\n",
     "    \n",
     "    print(\"=\"*60)\n",
-    "    print(f\" Training completed successfully!\")\n",
+    "    print(f\"Training completed successfully!\")\n",
     "    print(f\"  Training time: {training_time/60:.1f} minutes\")\n",
-    "    print(f\" Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
+    "    print(f\"Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
     "    \n",
     "except Exception as e:\n",
-    "    print(f\" Training failed with error: {e}\")\n",
+    "    print(f\"Training failed with error: {e}\")\n",
     "    import traceback\n",
     "    traceback.print_exc()"
    ]
@@ -417,7 +450,7 @@
     "        print(f\"  Total parameters: {total_params:,}\")\n",
     "        print(f\"  Trainable parameters: {trainable_params:,}\")\n",
     "        print(f\"  Model size: ~{total_params * 4 / 1e6:.1f} MB\")\n",
-    "        print(f\"  Architecture: {cfg.d_model}D × {cfg.n_layers}L × {cfg.n_heads}H\")\n",
+    "        print(f\"  Architecture: {cfg.d_model}D x {cfg.n_layers}L x {cfg.n_heads}H\")\n",
     "        \n",
     "        # Test with dummy input using the trained sequence length\n",
     "        batch_size = 4\n",
@@ -426,7 +459,7 @@
     "        \n",
     "        with torch.no_grad():\n",
     "            output = model(dummy_input)\n",
-    "            print(f\"\\n Forward Pass Test:\")\n",
+    "            print(f\"\\nForward Pass Test:\")\n",
     "            print(f\"  Input shape: {dummy_input.shape}\")\n",
     "            print(f\"  Output shape: {output.shape}\")\n",
     "            print(f\"  Output range: [{output.min():.3f}, {output.max():.3f}]\")\n",
@@ -438,7 +471,7 @@
     "        import traceback\n",
     "        traceback.print_exc()\n",
     "else:\n",
-    "    print(\"  No trained model found to test\")"
+    "    print(\"No trained model found to test\")"
    ]
   },
   {
@@ -496,7 +529,7 @@
     "#     shutil.copytree(model_dir, drive_path, dirs_exist_ok=True)\n",
     "#     print(f\"Models saved to Google Drive: {drive_path}\")\n",
     "\n",
-    "print(\" Training notebook complete!\")\n",
+    "print(\"Training notebook complete!\")\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"TRAINING SUMMARY:\")\n",
     "\n",
@@ -504,27 +537,27 @@
     "final_model_cfg = TRAINING_CONFIG[\"model_config\"]\n",
     "final_training_cfg = TRAINING_CONFIG[\"training_config\"]\n",
     "\n",
-    "print(f\" Model: {final_model_cfg['d_model']}D × {final_model_cfg['n_layers']}L × {final_model_cfg['n_heads']}H\")\n",
-    "print(f\" Parameters: ~{estimate_model_parameters(final_model_cfg)/1e6:.1f}M\")\n",
-    "print(f\" Training steps: {final_training_cfg['steps']:,}\")\n",
-    "print(f\" Batch size: {final_training_cfg['batch_size']} (effective: {final_training_cfg['batch_size'] * final_training_cfg['grad_accumulation_steps']})\")\n",
-    "print(f\" Sequence length: {final_training_cfg['max_sequence_length']}\")\n",
-    "print(f\" Learning rate: {final_training_cfg['learning_rate']}\")\n",
-    "print(f\" Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
+    "print(f\"Model: {final_model_cfg['d_model']}D x {final_model_cfg['n_layers']}L x {final_model_cfg['n_heads']}H\")\n",
+    "print(f\"Parameters: ~{estimate_model_parameters(final_model_cfg)/1e6:.1f}M\")\n",
+    "print(f\"Training steps: {final_training_cfg['steps']:,}\")\n",
+    "print(f\"Batch size: {final_training_cfg['batch_size']} (effective: {final_training_cfg['batch_size'] * final_training_cfg['grad_accumulation_steps']})\")\n",
+    "print(f\"Sequence length: {final_training_cfg['max_sequence_length']}\")\n",
+    "print(f\"Learning rate: {final_training_cfg['learning_rate']}\")\n",
+    "print(f\"Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
     "\n",
-    "print(f\"\\n🔧 GPU Optimizations Used:\")\n",
-    "print(f\"  • Gradient accumulation: {final_training_cfg['grad_accumulation_steps']} steps\")\n",
-    "print(f\"  • Mixed precision: {'✅' if final_training_cfg['use_amp'] else '❌'}\")\n",
-    "print(f\"  • Gradient clipping: {final_training_cfg['grad_clip_norm']}\")\n",
+    "print(f\"\\nGPU Optimizations Used:\")\n",
+    "print(f\"  - Gradient accumulation: {final_training_cfg['grad_accumulation_steps']} steps\")\n",
+    "print(f\"  - Mixed precision: {'Yes' if final_training_cfg['use_amp'] else 'No'}\")\n",
+    "print(f\"  - Gradient clipping: {final_training_cfg['grad_clip_norm']}\")\n",
     "\n",
-    "print(f\"\\n Next Steps:\")\n",
-    "print(\"   •  Centralized configuration system implemented\")\n",
-    "print(\"   •  GPU-aware automatic config selection\")\n",
-    "print(\"   •  Implement proper data loading (arc.io.load_task)\")\n",
-    "print(\"   •  Implement tokenization (arc.serialize.pack_example)\")\n",
-    "print(\"   •  Run evaluation on the trained model\")\n",
-    "print(\"   •  Experiment with different hyperparameters\")\n",
-    "print(\"   •  Try larger models if GPU memory allows\")\n",
+    "print(f\"\\nNext Steps:\")\n",
+    "print(\"   - Centralized configuration system implemented\")\n",
+    "print(\"   - GPU-aware automatic config selection\")\n",
+    "print(\"   - Implement proper data loading (arc.io.load_task)\")\n",
+    "print(\"   - Implement tokenization (arc.serialize.pack_example)\")\n",
+    "print(\"   - Run evaluation on the trained model\")\n",
+    "print(\"   - Experiment with different hyperparameters\")\n",
+    "print(\"   - Try larger models if GPU memory allows\")\n",
     "\n",
     "print(\"=\"*60)"
    ]
