--- a/notebooks/task_viz.ipynb
+++ b/notebooks/task_viz.ipynb
@@ -31,9 +31,40 @@
     "\n",
     "!git checkout vedant\n",
     "\n",
-    "# Install required packages\n",
-    "!pip install -e .\n",
-    "!pip install matplotlib numpy"
+    "# Install exact package versions for reproducibility\n",
+    "!pip install --quiet \\\n",
+    "    numpy==1.24.4 \\\n",
+    "    matplotlib==3.7.5 \\\n",
+    "    pandas==2.0.3 \\\n",
+    "    scipy==1.10.1 \\\n",
+    "    scikit-learn==1.3.2 \\\n",
+    "    torch==2.2.2 \\\n",
+    "    torchvision==0.17.2 \\\n",
+    "    torchaudio==2.2.2 \\\n",
+    "    transformers==4.46.3 \\\n",
+    "    huggingface-hub==0.36.0 \\\n",
+    "    seaborn==0.13.2 \\\n",
+    "    plotly==6.4.0 \\\n",
+    "    tqdm==4.67.1 \\\n",
+    "    pyyaml==6.0.3 \\\n",
+    "    requests==2.32.4 \\\n",
+    "    packaging==25.0 \\\n",
+    "    jsonschema==4.23.0 \\\n",
+    "    fastjsonschema==2.21.2 \\\n",
+    "    jinja2==3.1.6 \\\n",
+    "    markupsafe==2.1.5 \\\n",
+    "    urllib3==2.2.3 \\\n",
+    "    certifi==2025.10.5 \\\n",
+    "    charset-normalizer==3.4.4 \\\n",
+    "    idna==3.11 \\\n",
+    "    python-dateutil==2.9.0.post0 \\\n",
+    "    pytz==2025.2 \\\n",
+    "    tzdata==2025.2 \\\n",
+    "    six==1.17.0 \\\n",
+    "    setuptools==75.3.2\n",
+    "\n",
+    "# Install the package in development mode\n",
+    "!pip install -e ."
    ]
   },
   {
