Training notebook debugging

--- a/notebooks/train_tinylm.ipynb
+++ b/notebooks/train_tinylm.ipynb
@@ -340,8 +340,8 @@
     "        bs=training_cfg[\"batch_size\"],\n",
     "        lr=training_cfg[\"learning_rate\"],\n",
     "        d_model=model_cfg[\"d_model\"],\n",
-    "        n_layers=model_cfg[\"n_layers\"],\n",
-    "        n_heads=model_cfg[\"n_heads\"],\n",
+    "        # n_layers=model_cfg[\"n_layers\"],\n",
+    "        # n_heads=model_cfg[\"n_heads\"],\n",
     "        # Use training profile for gradient accumulation\n",
     "        training_profile=list(TRAINING_CONFIGS.keys())[\n",
     "            list(TRAINING_CONFIGS.values()).index(training_cfg)\n",
