--- a/notebooks/train_tinylm.ipynb
+++ b/notebooks/train_tinylm.ipynb
@@ -17,10 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3e157151",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch version: 2.2.2\n",
+      "CUDA available: False\n",
+      "WARNING: No GPU detected. Please enable GPU runtime in Colab!\n"
+     ]
+    }
+   ],
    "source": [
     "# Check GPU availability and install requirements\n",
     "import torch\n",
@@ -94,18 +104,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9eb96a9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully imported training modules and centralized constants\n",
+      "Project root: /Users/vedanttibrewal/Documents/USC/lectures/sem_3/CSCI-544/project/ARC-AGI-2\n",
+      "Available model sizes: ['tiny', 'small', 'medium', 'large']\n",
+      "Available training profiles: ['debug', 'small_gpu', 'medium_gpu', 'large_gpu']\n"
+     ]
+    }
+   ],
    "source": [
     "# Import necessary libraries\n",
     "import sys\n",
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "# Add project root to Python path\n",
-    "project_root = Path.cwd()\n",
+    "# Add project root to Python path (go up one level from notebooks)\n",
+    "project_root = Path.cwd().parent\n",
     "sys.path.append(str(project_root))\n",
     "\n",
     "# Import the training function and centralized constants\n",
@@ -126,10 +147,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a707323d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data directory contents:\n",
+      "  processed\n",
+      "    index.jsonl\n",
+      "    .gitkeep\n",
+      "    eval_tasks.json\n",
+      "    dev_tasks.json\n",
+      "  raw\n",
+      "    arc\n",
+      "      training\n",
+      "      .gitkeep\n",
+      "      evaluation.txt\n",
+      "      training.txt\n",
+      "      evaluation\n",
+      "\n",
+      "Training data exists: True\n",
+      "Evaluation data exists: True\n",
+      "Number of training files: 1000\n",
+      "Number of evaluation files: 120\n"
+     ]
+    }
+   ],
    "source": [
     "# Check data directory structure\n",
     "data_dir = project_root / \"data\"\n",
@@ -177,7 +223,23 @@
    "execution_count": null,
    "id": "17cfde04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No GPU detected! Using CPU-friendly minimal config\n",
+      "\n",
+      "Final Training Configuration:\n",
+      "  Data path: /Users/vedanttibrewal/Documents/USC/lectures/sem_3/CSCI-544/project/ARC-AGI-2/data/raw/arc/training\n",
+      "  Model dir: ./models/tinylm_checkpoints\n",
+      "  Steps: 100\n",
+      "  Learning rate: 0.0003\n",
+      "  Weight decay: 0.01\n",
+      "  Use AMP: True\n"
+     ]
+    }
+   ],
    "source": [
     "# GPU-aware dynamic configuration selection\n",
     "def select_optimal_configs(gpu_memory_gb):\n",
@@ -217,15 +279,17 @@
     "    print(f\"  Max sequence length: {training_config['max_sequence_length']}\")\n",
     "    print(f\"  Gradient accumulation: {training_config['grad_accumulation_steps']} steps\")\n",
     "    \n",
-    "    return model_config, training_config\n",
+    "    return model_size, training_profile, model_config, training_config\n",
     "\n",
     "# Check GPU and select optimal configuration\n",
     "if torch.cuda.is_available():\n",
     "    gpu_memory = torch.cuda.get_device_properties(0).total_memory / 1e9\n",
-    "    model_config, training_config = select_optimal_configs(gpu_memory)\n",
+    "    selected_model_size, selected_training_profile, model_config, training_config = select_optimal_configs(gpu_memory)\n",
     "else:\n",
     "    print(\"No GPU detected! Using CPU-friendly minimal config\")\n",
-    "    model_config, training_config = get_matched_configs('tiny', 'debug')\n",
+    "    selected_model_size = 'tiny'\n",
+    "    selected_training_profile = 'debug'\n",
+    "    model_config, training_config = get_matched_configs(selected_model_size, selected_training_profile)\n",
     "\n",
     "# Training configuration for this session\n",
     "TRAINING_CONFIG = {\n",
@@ -236,9 +300,15 @@
     "    # Use centralized configurations\n",
     "    \"model_config\": model_config,\n",
     "    \"training_config\": training_config,\n",
+    "    \n",
+    "    # Store selected profiles for use in training\n",
+    "    \"selected_model_size\": selected_model_size,\n",
+    "    \"selected_training_profile\": selected_training_profile,\n",
     "}\n",
     "\n",
-    "print(\"\\nFinal Training Configuration:\")\n",
+    "print(f\"\\nFinal Training Configuration:\")\n",
+    "print(f\"  Model size: {selected_model_size}\")\n",
+    "print(f\"  Training profile: {selected_training_profile}\")\n",
     "print(f\"  Data path: {TRAINING_CONFIG['data_path']}\")\n",
     "print(f\"  Model dir: {TRAINING_CONFIG['model_dir']}\")\n",
     "print(f\"  Steps: {training_config['steps']:,}\")\n",
@@ -292,6 +362,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d4e3c515",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing data loading...\n",
+      "Loading tasks from: /Users/vedanttibrewal/Documents/USC/lectures/sem_3/CSCI-544/project/ARC-AGI-2/data/raw/arc/training\n",
+      "Found 1000 JSON files\n",
+      "Loaded task from /Users/vedanttibrewal/Documents/USC/lectures/sem_3/CSCI-544/project/ARC-AGI-2/data/raw/arc/training/a85d4709.json: 4 training examples\n",
+      "Loaded task from /Users/vedanttibrewal/Documents/USC/lectures/sem_3/CSCI-544/project/ARC-AGI-2/data/raw/arc/training/c8cbb738.json: 3 training examples\n",
+      "Loaded task from /Users/vedanttibrewal/Documents/USC/lectures/sem_3/CSCI-544/project/ARC-AGI-2/data/raw/arc/training/8e1813be.json: 3 training examples\n",
+      "\n",
+      "Testing dataset creation...\n",
+      "Dataset created successfully with 10 examples\n",
+      "First example - Input shape: torch.Size([106]), Target shape: torch.Size([106])\n",
+      "Input range: [1, 82], Target range: [2, 82]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test data loading before training\n",
+    "import sys\n",
+    "sys.path.append(str(project_root))\n",
+    "\n",
+    "from arc.io.loader import load_tasks\n",
+    "from arc.models.train import ArcPairsDataset\n",
+    "\n",
+    "print(\"Testing data loading...\")\n",
+    "data_path = str(data_dir / \"raw\" / \"arc\" / \"training\")\n",
+    "print(f\"Loading tasks from: {data_path}\")\n",
+    "\n",
+    "try:\n",
+    "    # Load a few tasks to test\n",
+    "    import glob\n",
+    "    json_files = glob.glob(f\"{data_path}/*.json\")\n",
+    "    print(f\"Found {len(json_files)} JSON files\")\n",
+    "    \n",
+    "    # Test loading just first few tasks\n",
+    "    test_files = json_files[:3]\n",
+    "    tasks = []\n",
+    "    for file in test_files:\n",
+    "        from arc.io.loader import load_task\n",
+    "        task = load_task(file)\n",
+    "        tasks.append(task)\n",
+    "        print(f\"Loaded task from {file}: {len(task['train'])} training examples\")\n",
+    "    \n",
+    "    # Test dataset creation\n",
+    "    print(\"\\nTesting dataset creation...\")\n",
+    "    ds = ArcPairsDataset(tasks, max_len=512)  # Use smaller max_len for testing\n",
+    "    print(f\"Dataset created successfully with {len(ds)} examples\")\n",
+    "    \n",
+    "    if len(ds) > 0:\n",
+    "        # Test getting first example\n",
+    "        x, y = ds[0]\n",
+    "        print(f\"First example - Input shape: {x.shape}, Target shape: {y.shape}\")\n",
+    "        print(f\"Input range: [{x.min()}, {x.max()}], Target range: [{y.min()}, {y.max()}]\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"Error in data loading: {e}\")\n",
+    "    import traceback\n",
+    "    traceback.print_exc()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "54a8e59c",
    "metadata": {},
@@ -306,7 +444,36 @@
    "execution_count": null,
    "id": "e2d7faf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting TinyLM training with centralized configuration...\n",
+      "Model will be saved to: ./models/tinylm_checkpoints\n",
+      "============================================================\n",
+      "CONFIGURATION SUMMARY:\n",
+      "  Model: 256D, 4L, 4H\n",
+      "  Parameters: ~3.7M\n",
+      "  Training steps: 100\n",
+      "  Effective batch size: 8\n",
+      "  Learning rate: 0.0003\n",
+      "  Sequence length: 2048\n",
+      "============================================================\n",
+      "Training failed with error: {'steps': 100, 'batch_size': 4, 'learning_rate': 0.0003, 'max_sequence_length': 2048, 'betas': (0.9, 0.95), 'weight_decay': 0.01, 'grad_clip_norm': 1.0, 'serialization_mode': 'row', 'pad_token_id': 0, 'ignore_index': 0, 'save_every': 50, 'eval_every': 1000, 'use_amp': True, 'grad_accumulation_steps': 2} is not in list\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/var/folders/3w/z9ryb6gj05n_x375lp0r_81r0000gn/T/ipykernel_3819/3394006310.py\", line 37, in <module>\n",
+      "    list(TRAINING_CONFIGS.values()).index(training_cfg)\n",
+      "ValueError: {'steps': 100, 'batch_size': 4, 'learning_rate': 0.0003, 'max_sequence_length': 2048, 'betas': (0.9, 0.95), 'weight_decay': 0.01, 'grad_clip_norm': 1.0, 'serialization_mode': 'row', 'pad_token_id': 0, 'ignore_index': 0, 'save_every': 50, 'eval_every': 1000, 'use_amp': True, 'grad_accumulation_steps': 2} is not in list\n"
+     ]
+    }
+   ],
    "source": [
     "# Start training with centralized configurations\n",
     "import time\n",
@@ -318,8 +485,12 @@
     "# Display final configuration summary\n",
     "model_cfg = TRAINING_CONFIG[\"model_config\"]\n",
     "training_cfg = TRAINING_CONFIG[\"training_config\"]\n",
+    "selected_model_size = TRAINING_CONFIG[\"selected_model_size\"]\n",
+    "selected_training_profile = TRAINING_CONFIG[\"selected_training_profile\"]\n",
     "\n",
     "print(\"CONFIGURATION SUMMARY:\")\n",
+    "print(f\"  Model size: {selected_model_size}\")\n",
+    "print(f\"  Training profile: {selected_training_profile}\")\n",
     "print(f\"  Model: {model_cfg['d_model']}D, {model_cfg['n_layers']}L, {model_cfg['n_heads']}H\")\n",
     "print(f\"  Parameters: ~{estimate_model_parameters(model_cfg)/1e6:.1f}M\")\n",
     "print(f\"  Training steps: {training_cfg['steps']:,}\")\n",
@@ -331,21 +502,18 @@
     "start_time = time.time()\n",
     "\n",
     "try:\n",
-    "    # Call the training function with centralized configs\n",
+    "    # Call the training function with dynamically selected configurations\n",
     "    train(\n",
     "        model_dir=TRAINING_CONFIG[\"model_dir\"],\n",
     "        data_path=TRAINING_CONFIG[\"data_path\"],\n",
-    "        # Pass individual model config parameters for compatibility\n",
+    "        # Pass individual parameters\n",
     "        steps=training_cfg[\"steps\"],\n",
     "        bs=training_cfg[\"batch_size\"],\n",
     "        lr=training_cfg[\"learning_rate\"],\n",
     "        d_model=model_cfg[\"d_model\"],\n",
-    "        # n_layers=model_cfg[\"n_layers\"],\n",
-    "        # n_heads=model_cfg[\"n_heads\"],\n",
-    "        # Use training profile for gradient accumulation\n",
-    "        training_profile=list(TRAINING_CONFIGS.keys())[\n",
-    "            list(TRAINING_CONFIGS.values()).index(training_cfg)\n",
-    "        ]\n",
+    "        # Use the dynamically selected profiles from previous cell\n",
+    "        model_size=selected_model_size,\n",
+    "        training_profile=selected_training_profile\n",
     "    )\n",
     "    \n",
     "    end_time = time.time()\n",
@@ -353,8 +521,9 @@
     "    \n",
     "    print(\"=\"*60)\n",
     "    print(f\"Training completed successfully!\")\n",
+    "    print(f\"  Configuration used: {selected_model_size} model with {selected_training_profile} profile\")\n",
     "    print(f\"  Training time: {training_time/60:.1f} minutes\")\n",
-    "    print(f\"Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
+    "    print(f\"  Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
     "    \n",
     "except Exception as e:\n",
     "    print(f\"Training failed with error: {e}\")\n",
@@ -564,8 +733,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "nlp-proj",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
