new configs for memory optimization and new function to reuse checkpoints

--- a/notebooks/train_tinylm.ipynb
+++ b/notebooks/train_tinylm.ipynb
@@ -430,6 +430,113 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c972937d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check for existing checkpoints and resume capability\n",
+    "import torch\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def check_checkpoint_info(model_dir):\n",
+    "    \"\"\"Check what checkpoints are available for resuming.\"\"\"\n",
+    "    model_path = Path(model_dir)\n",
+    "    \n",
+    "    # Check for best.pt\n",
+    "    best_checkpoint = model_path / \"best.pt\"\n",
+    "    final_checkpoint = model_path / \"final.pt\"\n",
+    "    \n",
+    "    print(\"Checkpoint Status:\")\n",
+    "    print(\"=\" * 50)\n",
+    "    \n",
+    "    if best_checkpoint.exists():\n",
+    "        try:\n",
+    "            checkpoint = torch.load(best_checkpoint, map_location='cpu')\n",
+    "            print(f\"✓ Found best.pt checkpoint:\")\n",
+    "            print(f\"  - Best loss: {checkpoint.get('loss', 'N/A'):.4f}\")\n",
+    "            print(f\"  - Last step: {checkpoint.get('step', 'N/A')}\")\n",
+    "            print(f\"  - Learning rate: {checkpoint.get('lr', 'N/A')}\")\n",
+    "            \n",
+    "            if 'training_config' in checkpoint:\n",
+    "                train_cfg = checkpoint['training_config']\n",
+    "                print(f\"  - Total steps: {train_cfg.get('steps', 'N/A')}\")\n",
+    "                print(f\"  - Batch size: {train_cfg.get('batch_size', 'N/A')}\")\n",
+    "                steps_remaining = train_cfg.get('steps', 0) - checkpoint.get('step', 0) - 1\n",
+    "                print(f\"  - Steps remaining: {max(0, steps_remaining)}\")\n",
+    "            \n",
+    "            # Check if training was completed\n",
+    "            if checkpoint.get('training_completed', False):\n",
+    "                print(\"  - Status: Training completed\")\n",
+    "            else:\n",
+    "                print(\"  - Status: Training can be resumed\")\n",
+    "                \n",
+    "        except Exception as e:\n",
+    "            print(f\"✗ Found best.pt but couldn't load: {e}\")\n",
+    "    else:\n",
+    "        print(\"✗ No best.pt checkpoint found\")\n",
+    "    \n",
+    "    if final_checkpoint.exists():\n",
+    "        try:\n",
+    "            checkpoint = torch.load(final_checkpoint, map_location='cpu')\n",
+    "            print(f\"\\n✓ Found final.pt checkpoint:\")\n",
+    "            if checkpoint.get('training_completed', False):\n",
+    "                print(\"  - Training completed successfully\")\n",
+    "            else:\n",
+    "                print(\"  - Training may have been interrupted\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"\\n✗ Found final.pt but couldn't load: {e}\")\n",
+    "    \n",
+    "    # Check for regular checkpoints\n",
+    "    checkpoint_files = list(model_path.glob(\"ckpt_*.pt\"))\n",
+    "    if checkpoint_files:\n",
+    "        print(f\"\\n✓ Found {len(checkpoint_files)} regular checkpoints:\")\n",
+    "        for ckpt_file in sorted(checkpoint_files)[-3:]:  # Show last 3\n",
+    "            print(f\"  - {ckpt_file.name}\")\n",
+    "    \n",
+    "    print(\"=\" * 50)\n",
+    "\n",
+    "# Check current checkpoint status\n",
+    "checkpoint_dir = TRAINING_CONFIG[\"model_dir\"]\n",
+    "check_checkpoint_info(checkpoint_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93c99daf",
+   "metadata": {},
+   "source": [
+    "## Checkpoint Resuming\n",
+    "\n",
+    "This notebook now supports automatic resuming from the `best.pt` checkpoint file. Here's how it works:\n",
+    "\n",
+    "### Automatic Resuming Features:\n",
+    "- **Model State**: Automatically loads the best model weights\n",
+    "- **Optimizer State**: Restores AdamW optimizer momentum and parameters  \n",
+    "- **Training Progress**: Resumes from the exact step where training stopped\n",
+    "- **Best Loss Tracking**: Continues tracking the best validation loss\n",
+    "- **Mixed Precision**: Restores AMP scaler state for consistent training\n",
+    "\n",
+    "### Checkpoint Contents:\n",
+    "Each checkpoint now contains:\n",
+    "- `model`: Model state dictionary\n",
+    "- `cfg`: Model configuration  \n",
+    "- `loss`: Best loss achieved\n",
+    "- `step`: Current training step\n",
+    "- `optimizer`: Optimizer state (momentum, etc.)\n",
+    "- `scaler`: Mixed precision scaler state\n",
+    "- `training_config`: Training hyperparameters\n",
+    "- `model_config`: Model architecture settings\n",
+    "\n",
+    "### Usage:\n",
+    "- Set `RESUME_TRAINING = True` to enable resuming (default)\n",
+    "- Set `RESUME_TRAINING = False` to start from scratch\n",
+    "- The system automatically detects and loads `best.pt` if available\n",
+    "- Use the checkpoint management utilities below for advanced operations"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "54a8e59c",
    "metadata": {},
@@ -513,7 +620,8 @@
     "        d_model=model_cfg[\"d_model\"],\n",
     "        # Use the dynamically selected profiles from previous cell\n",
     "        model_size=selected_model_size,\n",
-    "        training_profile=selected_training_profile\n",
+    "        training_profile=selected_training_profile,\n",
+    "        resume_from_checkpoint=True, # save checkpoints in ARC-AGI-2/models/tinylm_checkpoints/\n",
     "    )\n",
     "    \n",
     "    end_time = time.time()\n",
@@ -529,6 +637,88 @@
     "    print(f\"Training failed with error: {e}\")\n",
     "    import traceback\n",
     "    traceback.print_exc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a851624",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checkpoint Management Utilities # Hopefully not needed often\n",
+    "from pathlib import Path\n",
+    "import torch\n",
+    "import shutil\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def backup_checkpoint(model_dir, backup_name=None):\n",
+    "    \"\"\"Create a backup of the current best.pt checkpoint.\"\"\"\n",
+    "    model_path = Path(model_dir)\n",
+    "    best_checkpoint = model_path / \"best.pt\"\n",
+    "    \n",
+    "    if not best_checkpoint.exists():\n",
+    "        print(\"No best.pt checkpoint found to backup\")\n",
+    "        return False\n",
+    "    \n",
+    "    if backup_name is None:\n",
+    "        timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "        backup_name = f\"best_backup_{timestamp}.pt\"\n",
+    "    \n",
+    "    backup_path = model_path / backup_name\n",
+    "    shutil.copy2(best_checkpoint, backup_path)\n",
+    "    print(f\"Checkpoint backed up to: {backup_path}\")\n",
+    "    return True\n",
+    "\n",
+    "def clear_checkpoints(model_dir, keep_best=True, confirm=True):\n",
+    "    \"\"\"Clear all checkpoints. Optionally keep best.pt.\"\"\"\n",
+    "    model_path = Path(model_dir)\n",
+    "    \n",
+    "    if confirm:\n",
+    "        response = input(\"Are you sure you want to clear checkpoints? (yes/no): \")\n",
+    "        if response.lower() != 'yes':\n",
+    "            print(\"Operation cancelled\")\n",
+    "            return\n",
+    "    \n",
+    "    # Find all checkpoint files\n",
+    "    checkpoint_files = list(model_path.glob(\"*.pt\"))\n",
+    "    \n",
+    "    cleared_count = 0\n",
+    "    for checkpoint_file in checkpoint_files:\n",
+    "        if keep_best and checkpoint_file.name == \"best.pt\":\n",
+    "            continue\n",
+    "        \n",
+    "        checkpoint_file.unlink()\n",
+    "        print(f\"Removed: {checkpoint_file.name}\")\n",
+    "        cleared_count += 1\n",
+    "    \n",
+    "    print(f\"Cleared {cleared_count} checkpoint files\")\n",
+    "\n",
+    "def reset_training_from_scratch(model_dir):\n",
+    "    \"\"\"Reset training to start completely from scratch.\"\"\"\n",
+    "    print(\"Resetting training to start from scratch...\")\n",
+    "    \n",
+    "    # Backup current best checkpoint if it exists\n",
+    "    if backup_checkpoint(model_dir):\n",
+    "        print(\"Current best checkpoint has been backed up\")\n",
+    "    \n",
+    "    # Clear all checkpoints\n",
+    "    clear_checkpoints(model_dir, keep_best=False, confirm=False)\n",
+    "    \n",
+    "    print(\"Training reset complete. Next training run will start from scratch.\")\n",
+    "\n",
+    "# Checkpoint management options\n",
+    "print(\"Checkpoint Management Options:\")\n",
+    "print(\"1. Check checkpoint status (run the cell above)\")  \n",
+    "print(\"2. Backup current best.pt: backup_checkpoint(TRAINING_CONFIG['model_dir'])\")  \n",
+    "print(\"3. Clear old checkpoints: clear_checkpoints(TRAINING_CONFIG['model_dir'])\")\n",
+    "print(\"4. Reset to start from scratch: reset_training_from_scratch(TRAINING_CONFIG['model_dir'])\")\n",
+    "print(\"\\nUncomment and run the desired operation below:\")\n",
+    "\n",
+    "# Example usage (uncomment to use):\n",
+    "# backup_checkpoint(TRAINING_CONFIG['model_dir'])\n",
+    "# clear_checkpoints(TRAINING_CONFIG['model_dir'], keep_best=True)  \n",
+    "# reset_training_from_scratch(TRAINING_CONFIG['model_dir'])"
    ]
   },
   {
