model configs update

--- a/notebooks/train_tinylm.ipynb
+++ b/notebooks/train_tinylm.ipynb
@@ -265,6 +265,10 @@
     "        training_profile = 'large_gpu'\n",
     "        print(\"Large GPU detected - using medium model for best performance\")\n",
     "    \n",
+    "\n",
+    "    model_config = \"small\"\n",
+    "    training_config = \"small_gpu\"\n",
+    "\n",
     "    # Get matched configurations\n",
     "    model_config, training_config = get_matched_configs(model_size, training_profile)\n",
     "    \n",
