--- a/notebooks/train_tinylm.ipynb
+++ b/notebooks/train_tinylm.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9eb96a9f",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
     "from pathlib import Path\n",
     "\n",
     "# Add project root to Python path (go up one level from notebooks)\n",
-    "project_root = Path.cwd().parent\n",
+    "project_root = Path.cwd()\n",
     "sys.path.append(str(project_root))\n",
     "\n",
     "# Import the training function and centralized constants\n",
